--- a/estilo/style.css
+++ b/estilo/style.css
@@ -63,7 +63,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
 }
 
@@ -71,13 +71,11 @@ nav {
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.363);
-    text-align: right;
 }
 
 nav > a {
     color: var(--cor1);
     padding: 10px;
-    margin: 30px;
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
